fix: Tweak header sizes, weights, colors, and spacing

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -9,27 +9,27 @@
 		}
 
 		h1 {
-			@apply text-foreground mt-0 mb-6 scroll-m-20 text-4xl leading-5 font-medium;
+			@apply mt-8 mb-6 scroll-m-20 text-4xl leading-9 text-red-400;
 		}
 
 		h2 {
-			@apply text-foreground mt-8 mb-4 scroll-m-20 text-2xl leading-5 font-medium;
+			@apply mt-8 mb-4 scroll-m-20 text-3xl leading-8 text-orange-400;
 		}
 
 		h3 {
-			@apply text-foreground mt-6 mb-4 scroll-m-20 text-xl leading-6 font-medium;
+			@apply mt-6 mb-4 scroll-m-20 text-2xl leading-7 text-yellow-400;
 		}
 
 		h4 {
-			@apply text-foreground mt-6 mb-3 scroll-m-20 text-lg leading-6 font-medium;
+			@apply mt-6 mb-3 scroll-m-20 text-xl leading-6 text-green-400;
 		}
 
 		h5 {
-			@apply text-foreground mt-5 mb-3 scroll-m-20 leading-6 font-medium;
+			@apply mt-5 mb-3 scroll-m-20 text-xl leading-6 text-blue-400;
 		}
 
 		h6 {
-			@apply text-foreground mt-5 mb-3 scroll-m-20 leading-6 font-medium;
+			@apply mt-5 mb-3 scroll-m-20 text-xl leading-6 text-purple-400;
 		}
 
 		a {
